alignment issues resolved

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
-.preloader-wrapper {
-	position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.pd {
+	top: 10px;
+}
+
+.tt {
+	left: 35px;
 }
